--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: true
       matrix:
         python-version: ["3.12"]
-
     steps:
     - uses: actions/checkout@v6
       with:
@@ -27,9 +25,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt pytest miniwdl
+        pip install -r requirements.txt -r requirements.ufish.txt pytest miniwdl pre-commit
         pip install -e .
-
+    - name: Pre-commit
+      run: |
+        pre-commit run --all-files
     - name: Test with pytest
       run: |
         pytest
