--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,11 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt pytest miniwdl pre-commit
+        pip install -r requirements.txt pytest miniwdl
         pip install -e .
-    - name: Pre-commit
-      run: |
-        pre-commit run --all-files
+
     - name: Test with pytest
       run: |
         pytest
