--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt pytest miniwdl
+        pip install -r requirements.txt pytest pytest-xdist miniwdl
         pip install -e .
 
     - name: Test with pytest
       run: |
-        pytest
+        pytest -n auto
