--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,8 +2,10 @@ name: CI/CD - Build and Push Docker Image to GHCR
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
   # Optional: Allows manual triggering of the workflow from the GitHub Actions tab
   workflow_dispatch:
 
