--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: Python tests
 
 on:
   push:
@@ -6,28 +6,28 @@ on:
   pull_request:
     branches: [ "main" ]
 
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#    strategy:
-#      fail-fast: true
-#      matrix:
-#        python-version: ["3.12"]
-#    steps:
-#    - uses: actions/checkout@v6
-#      with:
-#        lfs: true
-#    - name: Set up Python ${{ matrix.python-version }}
-#      uses: actions/setup-python@v6
-#      with:
-#        python-version: ${{ matrix.python-version }}
-#        cache: 'pip'
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install -r requirements.txt pytest pytest-xdist miniwdl
-#        pip install -e .
-#
-#    - name: Test with pytest
-#      run: |
-#        pytest -n auto
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        python-version: ["3.12"]
+    steps:
+    - uses: actions/checkout@v6
+      with:
+        lfs: true
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v6
+      with:
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt pytest pytest-xdist miniwdl
+        pip install -e .
+
+    - name: Test with pytest
+      run: |
+        pytest -n auto
