--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,14 @@ build:
   os: ubuntu-24.04
   tools:
     python: "3.12"
-
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
 sphinx:
   configuration: docs/conf.py
 
 python:
   install:
     - requirements: requirements.doc.txt
+    - method: pip
+      path: .
