--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,6 +12,7 @@ sphinx:
 
 python:
   install:
-    - requirements: requirements.doc.txt
-    - method: pip
-      path: .
+  - method: pip
+    path: .
+    extra_requirements:
+    - doc
