--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,18 +1,17 @@
 version: 2
 
+sphinx:
+  configuration: docs/conf.py
+python:
+  install:
+    - requirements: requirements.docs.txt
+
 build:
   os: ubuntu-24.04
   tools:
     python: "3.12"
   jobs:
+    install:
+      - pip install -e ".[doc]"
     post_checkout:
       - git fetch --unshallow || true
-sphinx:
-  configuration: docs/conf.py
-
-python:
-  install:
-  - method: pip
-    path: .
-    extra_requirements:
-    - doc
