--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ readme = { file = "README.md", content-type = "text/markdown" }
 requires-python = ">=3.11"
 license = { file = "LICENSE" }
 classifiers = [# https://pypi.python.org/pypi?%3Aaction=list_classifiers
-    "License :: OSI Approved :: BSD License",
+    "License :: OSI Approved :: Apache Software License",
     "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
     "Natural Language :: English",
