--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,44 @@
-anndata==0.12.7
+anndata==0.12.9
 adjustText==1.3.0
-bioio-nd2==1.1.0
-bioio-tifffile==1.1.0
-bioio-base==1.0.7
-bioio==1.6.1
+bioio-nd2==1.6.0
+bioio-tifffile==1.3.0
+bioio-base==3.2.0
+bioio-ome-tiff
+bioio==3.2.0
 centrosome==1.3.3
 cp-measure==0.1.13
 cython==3.2.4
 dask-image==2025.11.0
-dask==2025.11.0
+dask==2026.1.1
 decorator==5.2.1
 filelock==3.20.3
 flox==0.10.8
 fsspec==2026.1.0
 igraph==1.0.0
 itk-elastix==0.23.0
-itk==5.4.3
+itk==5.4.5
 joblib==1.5.3
 kneed==0.8.5
 mahotas==1.4.18
 matplotlib==3.10.8
 natsort==8.4.0
-numcodecs==0.15.1
+numcodecs==0.16.5
 numpy==1.26.4
-ome-zarr==0.10.3
+ome-zarr==0.12.2
 pandas==2.3.3
 pint==0.25.2
-psutil==7.2.1
-pyarrow==22.0.0
-pydantic==2.11.7
+psutil==7.2.2
+pyarrow==23.0.0
+pydantic==2.12.5
 pysam==0.23.3
 scikit-image==0.26.0
 scikit-learn==1.8.0
-scipy==1.17.0
+scipy==1.16.3
 seaborn==0.13.2
 shapely==2.1.2
-stardist==0.9.1
+stardist==0.9.2
 statsmodels==0.14.6
-tensorflow==2.19.0
-tifffile==2024.8.30
-xarray==2025.12.0
-zarr==2.18.7
+tensorflow==2.20.0
+tifffile==2026.1.28
+xarray==2026.1.0
+zarr==3.1.5
