--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 anndata==0.12.9
 adjustText==1.3.0
-bioio-nd2==1.6.0
-bioio-tifffile==1.3.0
-bioio-base==3.2.0
-bioio-ome-tiff
 bioio==3.2.0
+bioio-nd2==1.6.0
+bioio-ome-tiff==1.4.0
+bioio-tifffile==1.3.0
 centrosome==1.3.3
 cp-measure==0.1.13
 cython==3.2.4
@@ -30,7 +29,6 @@ pint==0.25.2
 psutil==7.2.2
 pyarrow==23.0.0
 pydantic==2.12.5
-pysam==0.23.3
 scikit-image==0.26.0
 scikit-learn==1.8.0
 scipy==1.16.3
