--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ adjustText==1.3.0
 bioio==3.2.0
 bioio-nd2==1.6.0
 bioio-ome-tiff==1.4.0
+bioio-ome-zarr==3.2.1
 bioio-tifffile==1.3.0
 centrosome==1.3.3
 cp-measure==0.1.13
