--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 build-backend = "setuptools.build_meta"
 requires = [
     "cython",
-    "numpy<2",
+    "numpy",
     "setuptools>=42",
     "setuptools_scm[toml]>=3.4",
     "wheel"
